--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GwywN0"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GwywN0" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=XuJUPU"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=XuJUPU" type="text/css">
 
   
   
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://mobiri.se">AnotherRuben</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="index.html#top">AnotherRuben</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -161,8 +161,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-4 item gallery-image active">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEerXf4rg-modal" data-bs-target="#uLEerXf4rg-modal">
-                    <img class="w-100" src="assets/images/dsc00788.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEfN9GaLp-modal" data-bs-target="#uLEfN9GaLp-modal">
+                    <img class="w-100" src="assets/images/dsc00788.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -170,8 +170,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-4 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEerXf4rg-modal" data-bs-target="#uLEerXf4rg-modal">
-                    <img class="w-100" src="assets/images/dsc01434.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEfN9GaLp-modal" data-bs-target="#uLEfN9GaLp-modal">
+                    <img class="w-100" src="assets/images/dsc01434.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -180,32 +180,32 @@
             </div>
             
             <div class="col-12 col-md-6 col-lg-4 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEerXf4rg-modal" data-bs-target="#uLEerXf4rg-modal">
-                    <img class="w-100" src="assets/images/dsc00561-2.png" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEfN9GaLp-modal" data-bs-target="#uLEfN9GaLp-modal">
+                    <img class="w-100" src="assets/images/dsc00561-2.png" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-4 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEerXf4rg-modal" data-bs-target="#uLEerXf4rg-modal">
-                    <img class="w-100" src="assets/images/dsc00499-2.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEfN9GaLp-modal" data-bs-target="#uLEfN9GaLp-modal">
+                    <img class="w-100" src="assets/images/dsc00499-2.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-4 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEerXf4rg-modal" data-bs-target="#uLEerXf4rg-modal">
-                    <img class="w-100" src="assets/images/dsc02630.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEfN9GaLp-modal" data-bs-target="#uLEfN9GaLp-modal">
+                    <img class="w-100" src="assets/images/dsc02630.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-4 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEerXf4rg-modal" data-bs-target="#uLEerXf4rg-modal">
-                    <img class="w-100" src="assets/images/dsc02716.jpg" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uLEfN9GaLp-modal" data-bs-target="#uLEfN9GaLp-modal">
+                    <img class="w-100" src="assets/images/dsc02716.jpg" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -214,11 +214,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="uLEerXf4rg-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="uLEfN9GaLp-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide carousel-fade" id="lb-uLEerXf4rg" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide carousel-fade" id="lb-uLEfN9GaLp" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/dsc00788.jpg" alt="Mobirise Website Builder">
@@ -238,18 +238,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-uLEerXf4rg" data-bs-target="#lb-uLEerXf4rg"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-uLEfN9GaLp" data-bs-target="#lb-uLEfN9GaLp"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-uLEerXf4rg">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-uLEfN9GaLp">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-uLEerXf4rg">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-uLEfN9GaLp">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -272,7 +272,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ijTJPo4KzfBPLH0BOzbt2IMLO5x/f6cNAjHg6OLWzh6/+efmkLEpj+7v5V+El3QKLPOhSp1EQhX9sj+ErPlcfvFHX2yL1My5mGHGG3wgnAjUbSn1SOFINL8+Ye56Q5gK">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QB6+H9ilMNpfhN+j/eLdyTOakUAFZlHguZSMMlyg6HcNK94mAoOm+EYGCPeixUXSeRzVsogeSuHwhSNdIbvx5s17wKVXpFKYDAniJOwydSGy8HdcB6qZ7SrPKJW2bN3s">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -313,7 +313,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2140450" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2140450" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
